# sps

./: .gitignore  Cargo.toml  README.md
etc/: sps.toml.example
scripts/: message.sql  task.sql  token.sql  transport.sql  user.sql
src/: lib.rs  main.rs
src/config/: mod.rs
src/handler/: middleware.rs  mod.rs
src/job/: mod.rs  pusher.rs  telegram.rs
src/logic/: auth_logic.rs  get_me_logic.rs  mod.rs  push_message_logic.rs
src/model/: message.rs  mod.rs  task.rs  token.rs  transaction.rs  transport.rs  user.rs
src/service/: mod.rs
src/transport/: mod.rs  telegram.rs
src/types/: mod.rs
